# here-string.hs

./: here-string.cabal
src/QQ/: String.hs
test/QQ/: StringSpec.hs
