name: here-string
version: 0.1.0.0
synopsis: Here docs & interpolated strings via quasiquotation
description: Here docs & interpolated strings via quasiquotation
license: BSD3
license-file: LICENSE
author: Taylor M. Hedberg
maintainer: strake888@gmail.com
copyright: ©2013 Taylor M. Hedberg, ©2014 Google Inc.
homepage: https://github.com/strake/here-string.hs
category: Data
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: https://github.com/strake/here-string.hs

library
  hs-source-dirs: src
  exposed-modules:
    QQ.String
  build-depends:
    base >= 4.5 && < 5,
    haskell-src-meta >= 0.6 && < 0.9,
    mtl >=2.1 && < 2.3,
    parsec ==3.1.*,
    template-haskell
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions:
    LambdaCase
    BlockArguments

test-suite here-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
  build-depends:
    base >=4.5 && <5,
    here,
    hspec,
    bytestring,
    text
  other-modules:
    QQ.StringSpec
  default-language: Haskell2010
